// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[App] matches snapshot 1`] = `
<div>
  <div
    class="h-screen"
  >
    <aside
      class="flex flex-col justify-between border-r border-slate-300 fixed top-0 left-0 bottom-0 w-64"
    >
      <div
        class="flex flex-col flex-initial overflow-y-auto"
      >
        <div
          class="p-1 flex justify-between font-bold select-none bg-slate-100"
        >
          Requests
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        />
      </div>
      <div
        class="flex flex-col flex-none overflow-y-auto"
      >
        <div
          class="p-1 flex justify-between select-none bg-slate-100"
        >
          <span
            class="font-bold"
          >
            Intercepts
          </span>
          <button
            class="self-stretch"
            title="Add intercept"
          >
            <svg
              class="h-full w-auto"
            />
          </button>
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        />
      </div>
    </aside>
    <main
      class="ml-64"
    >
      Hello World!
    </main>
  </div>
</div>
`;

exports[`[App] should update after callback 1`] = `
<div>
  <div
    class="h-screen"
  >
    <aside
      class="flex flex-col justify-between border-r border-slate-300 fixed top-0 left-0 bottom-0 w-64"
    >
      <div
        class="flex flex-col flex-initial overflow-y-auto"
      >
        <div
          class="p-1 flex justify-between font-bold select-none bg-slate-100"
        >
          Requests
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        >
          <div
            class="select-none whitespace-nowrap overflow-hidden text-ellipsis"
          >
            <span>
              https://example.com
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col flex-none overflow-y-auto"
      >
        <div
          class="p-1 flex justify-between select-none bg-slate-100"
        >
          <span
            class="font-bold"
          >
            Intercepts
          </span>
          <button
            class="self-stretch"
            title="Add intercept"
          >
            <svg
              class="h-full w-auto"
            />
          </button>
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        />
      </div>
    </aside>
    <main
      class="ml-64"
    >
      Hello World!
    </main>
  </div>
</div>
`;
